[package]
name = "maplit"
version = "0.1.3"
authors = ["bluss"]

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/maplit"
documentation = "http://bluss.github.io/maplit"

description = "Container / collection literal macros for HashMap, HashSet, BTreeMap, BTreeSet."

keywords = ["literal", "data-structure", "hashmap", "macro"]

[dependencies]
clippy = {version = "~0.0.23", optional = true}

[features]
default = []
dev = ["clippy"]

