[package]
name = "maplit"
version = "0.1.4"
authors = ["bluss"]

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/maplit"
documentation = "https://docs.rs/maplit/"

description = "Container / collection literal macros for HashMap, HashSet, BTreeMap, BTreeSet."

keywords = ["literal", "data-structure", "hashmap", "macro", "map"]

